# tac-code-optimizer

./: CMakeLists.txt  Makefile  README.md  input.txt  output.txt  package-lock.json  package.json  server,js  server.js
include/: basicblock.h  cfg.h  optimizer.h  parser.h  utils.h
public/: index.html  script.js  style.css
src/: basicblock.cpp  cfg.cpp  main.cpp  optimizer.cpp  parser.cpp  utils.cpp
